# wooting-spectro

./: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
src/: audio.rs  demo.rs  draw.rs  fft.rs  keyboard_loop.rs  main.rs  options.rs  tray.rs
src/types/: cols.rs  freq_weight.rs  keyboard.rs  mod.rs  spectrum_memory.rs  themes.rs  traits.rs
