[package]
name = "wooting-spectro"
version = "0.0.1"
edition = "2021"

authors = ["PrimmR"]
license = "GNU General Public License v3.0"
description = "A spectrum analyzer for Wooting keyboards"
repository = "https://github.com/PrimmR/wooting-spectro"
readme = "README.md"
categories = ["Visualization", "Multimedia"]
keywords = ["Wooting", "Spectrum-Analyzer", "Keyboard"]


[dependencies]
# Required
casey = "0.4.0"
cpal = "0.15.3"
easyfft = "0.4.1"
float-ord = "0.3.2"
tray-icon = "0.14.3"
winit = "0.30.5"
wooting-rgb = { git = "https://github.com/ShayBox/Wooting-RGB", rev = "dbc464c" }
wooting-rgb-sys = { git = "https://github.com/ShayBox/Wooting-RGB", rev = "dbc464c" }
toggle-keys = { git = "https://github.com/PrimmR/toggle-keys", rev = "b7ec9c8" }
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
strum = { version = "0.26.3", features = ["derive"] }
single-instance = "0.3.3"

# Optional
sdl2 = { version = "0.37.0", features = ["bundled"], optional = true }
dirs = { version = "5.0.1", optional = true }

[build-dependencies]
image = "0.25.2"
winresource = "0.1.17"

[features]
window-display = ["dep:sdl2"]
demo = []
cli = ["dep:dirs"]
